[gd_scene load_steps=13 format=2]

[ext_resource path="res://sprites/bullet_sheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/bullet.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 3 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 8, 8 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "bullet",
"speed": 8.0
} ]

[sub_resource type="ParticlesMaterial" id=7]
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 90.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 1.0
color = Color( 0.980392, 0.792157, 0.721569, 1 )

[sub_resource type="Curve" id=8]
min_value = -200.0
max_value = 200.0
_data = [ Vector2( 0, 174.318 ), 0.0, 0.0, 0, 0, Vector2( 0.283951, -124.091 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=10]
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 25.0
linear_accel_curve = SubResource( 9 )
color = Color( 0.980392, 0.792157, 0.721569, 1 )

[node name="bullet" type="Area2D"]
script = ExtResource( 2 )

[node name="hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="animated_sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
animation = "bullet"
frame = 1
playing = true

[node name="trail_emitter" type="Particles2D" parent="."]
lifetime = 0.25
local_coords = false
process_material = SubResource( 7 )

[node name="explosion_emitter" type="Particles2D" parent="."]
emitting = false
amount = 10
lifetime = 0.5
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 10 )

[node name="lifetime_timer" type="Timer" parent="."]
one_shot = true

[node name="explosion_timer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_bullet_body_entered"]
[connection signal="timeout" from="lifetime_timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="explosion_timer" to="." method="_on_explosion_timer_timeout"]
